fix: gaps and animations

--- a/src/index.css
+++ b/src/index.css
@@ -23,20 +23,10 @@
   --ease-in-out-back: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
   --ui-padding: 5rem;
-}
 
-@font-face {
-  font-family: 'ApfelGrotezk-Bold';
-  src: url('./fonts/ApfelGrotezk-Fett.woff') format('woff');
-  font-display: swap;
-  font-weight: 900;
-}
-
-@font-face {
-  font-family: 'ApfelGrotezk-Regular';
-  src: url('./fonts/ApfelGrotezk-Regular.woff') format('woff');
-  font-display: swap;
-  font-weight: 400;
+  --color-primary: orange;
+  --color-secondary: #381f05;
+  --color-primary-accent: #513e1b;
 }
 
 @font-face {
@@ -63,7 +53,7 @@ canvas {
 }
 
 body {
-  font-family: 'ApfelGrotezk-Regular';
+  font-family: 'Capriola';
   font-weight: 400;
 }
 
@@ -77,12 +67,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #f2e7d4;
   z-index: 100;
   font-size: 5rem;
+  color: var(--color-primary);
 }
 
-.loader[data-show='false'] {
+body[data-is-ready='true'] .loader {
   opacity: 0;
   transition: opacity 0.3s ease-out;
   pointer-events: none;
@@ -103,6 +94,7 @@ body {
   user-select: none;
   padding-top: var(--ui-padding);
   padding-bottom: var(--ui-padding);
+  color: var(--color-primary-accent);
 }
 
 .ui h1 {
@@ -112,17 +104,28 @@ body {
   margin: 1rem;
   letter-spacing: -0.025em;
   text-transform: uppercase;
+  color: var(--color-primary);
 }
 
 .ui > * + * {
   margin-top: 1rem;
 }
 
-.ui .status {
+.game-status-text {
   width: 100%;
-
   font-size: 1.5rem;
-  color: rgb(47, 47, 47);
+}
+
+body[data-is-ready='false'] .game-status-text {
+  opacity: 0;
+  transform: translateY(10px);
+}
+
+body[data-is-ready='true'] .game-status-text {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.3s ease-out;
+  transition-delay: 0.8s;
 }
 
 .ui .btn-container {
@@ -149,20 +152,19 @@ button:not(:disabled) {
   font-family: 'Sniglet';
   font-weight: 900;
   font-size: 1.5rem;
-  color: #e8e8e8;
-  color: rgb(33, 33, 33);
-  text-shadow: 0 0 10px #eeeeee91;
+  color: var(--color-secondary);
+  text-shadow: 0 0 10px #00000039;
   user-select: none;
   pointer-events: none !important;
 }
 
 .player-mark[data-state='success'] {
-  color: rgb(255, 255, 255);
+  color: white;
   animation: glow 2s ease-in-out infinite alternate;
 }
 
 .player-mark[data-preview='true'] {
-  color: rgb(255, 255, 255);
+  color: white;
   opacity: 0.4;
 }
 
@@ -177,22 +179,18 @@ button:not(:disabled) {
 }
 
 .btn {
-  --btn-surface: white;
-  --btn-background: rgb(20, 18, 18);
-  --btn-background-dark: #dd0000;
-
   font-family: 'Sniglet';
   font-size: 1.5rem;
-  color: var(--btn-surface);
-  background-color: var(--btn-background);
+  color: var(--color-secondary);
+  background-color: var(--color-primary);
   text-transform: uppercase;
   text-decoration: none;
   margin: 1rem;
   padding: 1rem 2.5rem;
   min-width: 100px;
-  border: 2px solid var(--btn-background);
   border-radius: 2rem;
   position: relative;
   top: 0;
   transition: all 100ms ease-in-out;
+  border: none;
 }
